--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap-icons": "^1.11.3",
+    "google-maps-react": "^2.0.6",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-circle": "^1.1.1",
     "react-dom": "^18.2.0",
