--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "bootstrap-icons": "^1.11.3",
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "react": "^18.2.0",
     "react-circle": "^1.1.1",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
