--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "reactjs-popup": "^2.0.6",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
